<resources>
    <string name="app_name">Material</string>
    <string name="photo_of_the_day_stub">Photo of the day</string>
    <string name="search_wiki">Найти в Википедии</string>
    <string name="wiki_helper_text">Поищите термин в википедии</string>
    <string name="favourite">favourite</string>
    <string name="settings">settings</string>
    <string name="search">Search</string>
    <string name="reload">Reload...</string>
    <string name="not_loaded">Not loaded</string>
    <string name="photo_of_earth">Photo of Earth</string>
    <string name="choose_theme">Choose Theme</string>
    <string name="original">Original</string>
    <string name="alternative">Alternative</string>
</resources>
